# fbprototype

./: .env.example  .replit  README.md  WHATSAPP_ERP_README.md  animal_blood_types.json  app.py  config.py  create_realistic_vendor.py  create_test_vendors.py  database_utils.py  db_maintenance.py  db_pool.py  dog_breeds.json  email_verification.py  encryption.py  erp.db  erp.db-journal  erp_setup.py  error_handlers.py  extensions.py  furrvet.db  furrvet.py  gdpr_migration.py  i18n.py  init_users_db.py  inventory_bot.py  kv_store.db  main.py  meta_whatsapp_integration.py  module_manager.py  populate_test_data.py  pyproject.toml  replit.md  replit_db_shim.py  requirements.txt  secret.key  seed.py  send_email.py  session_manager.py  start.sh  (+7 more)
api/: config.py  error_handlers.py  extensions.py  rbac.py
attached_assets/: Pasted--Core-Features-1-Inventory-Table-Structure-products-sql-Copy-Edit-CREATE-TABLE-products-id-I-1751878748973_1751878748974.txt  Pasted--FurrButler-Veterinary-ERP-Phase-1-Detailed-Development-Prompt-Phase-1-Goal--1752569623948_1752569623950.txt  Pasted--FurrButler-Veterinary-ERP-Phase-2-Detailed-Development-Prompt-Phase-2-Goal-E-1752576873253_1752576873255.txt  Pasted--FurrButler-Veterinary-ERP-Phase-3-Detailed-Development-Prompt-Phase-3-Goal-E-1752577918857_1752577918858.txt  Pasted--FurrWings-Module-Redesign-Prompt-Vet-Handler-Isolation-Centers-Objective-Redesign-1754313676166_1754313676166.txt  Pasted--Guide-on-Where-and-How-to-Fix-the-Errors-in-Your-Code-Error-Argument-of-type-str-None-ca-1753196807552_1753196807552.txt  (+68 more)
chatbot/: __init__.py  main.py  (+7 more)
(+394 files in other folders)
