[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-socketio>=5.5.1",
    "flask==3.1.0",
    "replit==4.1.0",
    "werkzeug>=3.1.3",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "cryptography>=45.0.4",
    "itsdangerous>=2.2.0",
]
